// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThesisSubmission test should display successfull submission screen 1`] = `
<StandardPage
  className=""
  title="Professional doctorate deposit"
>
  <StandardCard
    className=""
  >
    <p>
      You thesis has been submitted. You will received acknowledgement email shortly.
    </p>
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Go to the next step"
        labelPosition="after"
        onTouchTap={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</StandardPage>
`;

exports[`ThesisSubmission test should render hdr thesis submission acknowledgement 1`] = `
<StandardPage
  className=""
  title="Higher degree by research thesis deposit"
>
  <StandardCard
    className=""
  >
    <p>
      You thesis has been submitted. You will received acknowledgement email shortly.
    </p>
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Go to the next step"
        labelPosition="after"
        onTouchTap={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</StandardPage>
`;

exports[`ThesisSubmission test should render hdr thesis submission form 1`] = `
<StandardPage
  className=""
  title="Higher degree by research thesis deposit"
>
  <p>
    <span>
      Required fields are marked with 
      <span
        className="requiredField"
      >
        <label>
           
        </label>
      </span>
    </span>
  </p>
  <form>
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
    />
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Thesis information",
        }
      }
      title="Thesis information"
    >
      <div
        className="columns"
        style={
          Object {
            "marginTop": "-12px",
          }
        }
      >
        <div
          className="column"
        >
          <Field
            autoFocus={true}
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Thesis title is required"
            floatingLabelText="Title"
            fullWidth={true}
            hintText="Thesis title"
            multiLine={true}
            name="rek_title"
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column is-half"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="School, institute or centre is required"
            floatingLabelText="School, Institute or Centre"
            hintText=""
            name="fez_record_search_key_org_unit_name.rek_org_unit_name"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Institution name is required"
            floatingLabelText="Institution name"
            hintText=""
            name="fez_record_search_key_org_name.rek_org_name"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column is-half"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            locale={
              Object {
                "errorMessage": "Thesis type is required",
                "label": "Thesis type",
              }
            }
            name="rek_genre_type"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column"
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Publication date"
            floatingTitleRequired={true}
            name="rek_date"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Author name is required"
            floatingLabelText="Author name"
            fullWidth={true}
            hintText=""
            name="currentAuthor.0.nameAsPublished"
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Abstract is required"
            floatingLabelText="Abstract"
            fullWidth={true}
            hintText="Provide an abstract or summary of the work"
            multiLine={true}
            name="fez_record_search_key_description.rek_description"
            rows={4}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Enter supervisor names e.g. first name, last name. Additional boxes will appear for more supervisors.",
          "title": "Supervisors help",
        }
      }
      title="Supervisors"
    >
      <div>
        Please provide a list of supervisors and then select your name from the list.
      </div>
      <Field
        className="requiredField"
        component={[Function]}
        disabled={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add supervisor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   - Please 
                  <b>
                    add to a list of supervisors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of supervisors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedHint": "",
                "nameAsPublishedLabel": "Enter each supervisor's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div
                  style={
                    Object {
                      "marginTop": "12px",
                    }
                  }
                >
                  <br />
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                   - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Supervisor's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "ariaLabel": "Select this supervisor ([name]) to assign it as you",
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "notSelectedLabelSuffix": "- select to confirm this supervisor is you",
                "ordinalData": Array [
                  "First",
                  "Second",
                  "Third",
                  "Fourth",
                  "Fifth",
                  "Sixth",
                  "Seventh",
                  "Eighth",
                  "Ninth",
                  "Tenth",
                ],
                "selectedHint": "This is you",
                "selectedLabelSuffix": "- assigned as you",
                "suffix": " listed supervisor",
                "unselectedHint": "Select this to confirm this supervisor is you",
              },
            },
          }
        }
        name="supervisors"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Field of research help",
        }
      }
      title="Field of research"
    >
      <div>
        Select up to 3 Field of Research (FoR) codes
      </div>
      <Field
        className="requiredField"
        component={[Function]}
        disabled={false}
        distinctOnly={true}
        hideReorder={true}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "inputFieldHint": "Type field of research value then select a value from the list",
                "inputFieldLabel": "Field of research",
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "Field of research",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
              },
            },
          }
        }
        maxCount={3}
        name="fieldOfResearch"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Optional information help",
        }
      }
      title="Keywords"
    >
      <div>
        Add up to 10 keywords that describe the content of the thesis
      </div>
      <Field
        component={[Function]}
        disabled={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add",
                "inputFieldHint": "Type keyword",
                "inputFieldLabel": "Keyword",
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all keywords",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all keywords?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "Keyword",
                "reorderColumn": "Reorder keywords",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this keyword",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this keyword?",
                  "confirmationTitle": "Delete keyword",
                },
                "moveDownHint": "Move keyword down the order",
                "moveUpHint": "Move keyword up the order",
              },
            },
          }
        }
        maxCount={10}
        name="fez_record_search_key_keywords"
        searchKey={
          Object {
            "order": "rek_keywords_order",
            "value": "rek_keywords",
          }
        }
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "file help...",
          "title": "Upload files",
        }
      }
      title="Upload files"
    >
      <div>
        PDF files must be saved using the following naming structure 
        <b>
          &lt;student number&gt;_&lt;degree type&gt;_&lt;stage examination&gt;.pdf
        </b>
        . Stages of examination are: submission, or correctedthesis, or finalthesis. Please refer to 
        <a
          href="http://ppl.app.uq.edu.au/content/4.60.08-higher-degree-research-examination"
          target="_blank"
        >
          HDR submission guidelines
        </a>
         for file naming conventions. File submission is mandatory.
        <span
          className="requiredField"
        >
          <label>
             
          </label>
        </span>
        <br />
        For example: 
        <br />
        - s1234567_phd_thesis.pdf 
        <br />
        - s1234567_phd_abstract.pdf 
        <br />
        - s1234567_phd_submissionform.pdf 
        <br />
      </div>
      <Field
        component={[Function]}
        disabled={false}
        name="files"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Deposit your thesis"
          labelPosition="after"
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;

exports[`ThesisSubmission test should render sbs thesis submission acknowledgement 1`] = `
<StandardPage
  className=""
  title="Professional doctorate deposit"
>
  <StandardCard
    className=""
  >
    <p>
      You thesis has been submitted. You will received acknowledgement email shortly.
    </p>
  </StandardCard>
  <div
    className="columns action-buttons"
  >
    <div
      className="column is-hidden-mobile"
    />
    <div
      className="column is-narrow-desktop"
    >
      <RaisedButton
        disabled={false}
        fullWidth={true}
        label="Go to the next step"
        labelPosition="after"
        onTouchTap={[Function]}
        primary={false}
        secondary={true}
      />
    </div>
  </div>
</StandardPage>
`;

exports[`ThesisSubmission test should render sbs thesis submission form 1`] = `
<StandardPage
  className=""
  title="Professional doctorate deposit"
>
  <p>
    <span>
      Required fields are marked with 
      <span
        className="requiredField"
      >
        <label>
           
        </label>
      </span>
    </span>
  </p>
  <form>
    <NavigationDialogBox
      txt={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to abandon workflow?",
          "confirmationTitle": "Abandon workflow",
        }
      }
    />
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Thesis information",
        }
      }
      title="Thesis information"
    >
      <div
        className="columns"
        style={
          Object {
            "marginTop": "-12px",
          }
        }
      >
        <div
          className="column"
        >
          <Field
            autoFocus={true}
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Thesis title is required"
            floatingLabelText="Title"
            fullWidth={true}
            hintText="Thesis title"
            multiLine={true}
            name="rek_title"
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column is-half"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="School, institute or centre is required"
            floatingLabelText="School, Institute or Centre"
            hintText=""
            name="fez_record_search_key_org_unit_name.rek_org_unit_name"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Institution name is required"
            floatingLabelText="Institution name"
            hintText=""
            name="fez_record_search_key_org_name.rek_org_name"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column is-half"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            locale={
              Object {
                "errorMessage": "Thesis type is required",
                "label": "Thesis type",
              }
            }
            name="rek_genre_type"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
        <div
          className="column"
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Publication date"
            floatingTitleRequired={true}
            name="rek_date"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Author name is required"
            floatingLabelText="Author name"
            fullWidth={true}
            hintText=""
            name="currentAuthor.0.nameAsPublished"
            rows={1}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={false}
            errorMessage="Abstract is required"
            floatingLabelText="Abstract"
            fullWidth={true}
            hintText="Provide an abstract or summary of the work"
            multiLine={true}
            name="fez_record_search_key_description.rek_description"
            rows={4}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Enter supervisor names e.g. first name, last name. Additional boxes will appear for more supervisors.",
          "title": "Supervisors help",
        }
      }
      title="Supervisors"
    >
      <div>
        Please provide a list of supervisors and then select your name from the list.
      </div>
      <Field
        className="requiredField"
        component={[Function]}
        disabled={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add supervisor",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   - Please 
                  <b>
                    add to a list of supervisors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of supervisors below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedHint": "",
                "nameAsPublishedLabel": "Enter each supervisor's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div
                  style={
                    Object {
                      "marginTop": "12px",
                    }
                  }
                >
                  <br />
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                   - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Supervisor's name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "ariaLabel": "Select this supervisor ([name]) to assign it as you",
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "notSelectedLabelSuffix": "- select to confirm this supervisor is you",
                "ordinalData": Array [
                  "First",
                  "Second",
                  "Third",
                  "Fourth",
                  "Fifth",
                  "Sixth",
                  "Seventh",
                  "Eighth",
                  "Ninth",
                  "Tenth",
                ],
                "selectedHint": "This is you",
                "selectedLabelSuffix": "- assigned as you",
                "suffix": " listed supervisor",
                "unselectedHint": "Select this to confirm this supervisor is you",
              },
            },
          }
        }
        name="supervisors"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Field of research help",
        }
      }
      title="Field of research"
    >
      <div>
        Select up to 3 Field of Research (FoR) codes
      </div>
      <Field
        className="requiredField"
        component={[Function]}
        disabled={false}
        distinctOnly={true}
        hideReorder={true}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "inputFieldHint": "Type field of research value then select a value from the list",
                "inputFieldLabel": "Field of research",
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "Field of research",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
              },
            },
          }
        }
        maxCount={3}
        name="fieldOfResearch"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "Some help",
          "title": "Optional information help",
        }
      }
      title="Keywords"
    >
      <div>
        Add up to 10 keywords that describe the content of the thesis
      </div>
      <Field
        component={[Function]}
        disabled={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButtonLabel": "Add",
                "inputFieldHint": "Type keyword",
                "inputFieldLabel": "Keyword",
              },
            },
            "header": Object {
              "locale": Object {
                "deleteAll": "Remove all keywords",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all keywords?",
                  "confirmationTitle": "Delete all",
                },
                "nameColumn": "Keyword",
                "reorderColumn": "Reorder keywords",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this keyword",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this keyword?",
                  "confirmationTitle": "Delete keyword",
                },
                "moveDownHint": "Move keyword down the order",
                "moveUpHint": "Move keyword up the order",
              },
            },
          }
        }
        maxCount={10}
        name="fez_record_search_key_keywords"
        searchKey={
          Object {
            "order": "rek_keywords_order",
            "value": "rek_keywords",
          }
        }
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": "file help...",
          "title": "Upload files",
        }
      }
      title="Upload files"
    >
      <div>
        PDF files must be saved using the following naming structure 
        <b>
          &lt;student number&gt;_&lt;degree type&gt;_&lt;stage examination&gt;.pdf
        </b>
        . Stages of examination are: submission, or correctedthesis, or finalthesis. Please refer to 
        <a
          href="http://ppl.app.uq.edu.au/content/4.60.08-higher-degree-research-examination"
          target="_blank"
        >
          HDR submission guidelines
        </a>
         for file naming conventions. File submission is mandatory.
        <span
          className="requiredField"
        >
          <label>
             
          </label>
        </span>
        <br />
        For example: 
        <br />
        - s1234567_phd_thesis.pdf 
        <br />
        - s1234567_phd_abstract.pdf 
        <br />
        - s1234567_phd_submissionform.pdf 
        <br />
      </div>
      <Field
        component={[Function]}
        disabled={false}
        name="files"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Deposit your thesis"
          labelPosition="after"
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;
